# 1d-heat-equation-solver

./: .gitignore  CMakeList.txt  CMakeLists.txt  LICENSE  README.md  main  main.cpp
examples/: plot_results.py
include/: BackwardEuler1D.h  BoundaryCondition.h  CrankNicolson1D.h  ForwardEuler.h  Grid1D.h  HeatEquation1D.h  HeatSolver1D.h  InitialCondition.h  TridiagonalSolver.h
main.dSYM/Contents/Resources/DWARF/: main
main.dSYM/Contents/Resources/Relocations/aarch64/: main.yml
src/: BackwardEuler1D.cpp  BoundaryCondition.cpp  CrankNicolson1D.cpp  ForwardEuler1D.cpp  Grid1D.cpp  HeatEquation1D.cpp  HeatSolver1D.cpp  InitialCondition.cpp  TridiagonalSolver.cpp
